a0cdd787f1d4 replay gib_eks